# supervisor

./: .gitignore  pyproject.toml
src/api/: server.py
src/api/core/database/: session.py
src/api/core/middleware/: auth_middleware.py  hmac_verification.py  middleware_service.py  verification_middleware.py
src/api/core/models/: http_models.py
src/api/core/services/: encryption_service.py  hashing_service.py  http_service.py  redis_service.py  request_validation_service.py  webtoken_service.py
src/api/modules/interactions/: interactions_controller.py  interactions_models.py  interactions_routes.py  interactions_ws.py
src/api/modules/websocket/: websocket_service.py  ws_hmac_verification.py
src/dependencies/: configure_container.py  container.py
src/utils/decorators/: error_handler.py
src/utils/http/: get_hmac_header.py
src/utils/logs/: logger.py
src/workflow/: graph.py  state.py
src/workflow/agents/: supervisor.py
src/workflow/agents/supervisor/: supervisor_agent.py  supervisor_models.py
src/workflow/orchestrator/: orchestrator.py
src/workflow/services/: embeddings_service.py  llm_service.py  prompt_service.py
tests/e2e/: test_interactions_route.py
tests/integration/: test_graph.py
tests/unit/: test_orchestrator_node.py  test_supervisor_node.py
