[project]
name = "app-expertise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "cryptography>=45.0.6",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "qdrant-client>=1.15.1",
    "sqlalchemy>=2.0.43",
]
